# CortexCLI

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  CCNAModule16-17.txt  CHANGELOG.md  CLAUDE.md  CONVO12122025.txt  Convo2.txt  ITNPracticeFinalExam.txt  ITNPracticeTest.txt  ITNSkillsAssessment.txt  PHASE_0_HONEST_ASSESSMENT.md  README.md  RESTRUCTURE_PLAN.md  TEXT  config.py  convo.txt  cortex.bat  cortex.ps1  cortex.py  github_issues.md  main.py  nls.bat  notion_schema_20251206_101704.json  pyproject.toml  pytest.ini  qa_report.md  requirements.txt  setup.py  struggles.yaml  study.bat  tasks.md  temp_cloze_back.txt  temp_cloze_css.txt  temp_cloze_front.txt  temp_list_tables.py  test_parsers.py  tmp_gh_issues_out.txt
.claude/: settings.local.json
.mypy_cache/: missing_stubs
data/: atom_type_metadata.json  ccna_struggle_map.yaml  misconception_seed_data.sql  skill_taxonomy_seed.sql
docs/: ACCOMPLISHMENTS.md  ROADMAP.md  SDE2.txt  Strategic Vision.html  index.md
features/: anki_import.feature  prerequisites.feature  quality_analysis.feature  quiz_quality.feature
outputs/: ccna-atoms.json  ccna-full-atoms.json  ccna-raw-atoms.json  cortex_master.json  cortex_master_deck_20251208.json  curriculum-atoms.json  curriculum-gemini-atoms.json
scripts/: README.md  adaptive_study.py  analyze_atom_quality.py  analyze_struggle_coverage.py  anki_full_sync.py  anki_pull_reviews.py  audit_flashcard_quality.py  audit_tf_quality.py  backup_progress.py  batch_regenerate.py  ccna_assessment.py  ccna_detailed_analysis.py  ccna_generate.py  ccna_prefix_analysis.py  check_anki_types.py  check_atom_stats.py  check_counts.py  check_sections.py  cleanup_and_regenerate.py  compute_optimal_atoms.py  create_gh_issues.py  db_to_deck.py  debug_quiz_gen.py  explore_notion_schemas.py  final_hydrate.py  final_stats.py  find_byod_cards.py  finish_hydration.py  fix_atom_section_links.py  fix_cloze_template.py  fix_db_schema.py  fix_module17.py  fix_schema.py  force_hydrate.py  generate_all_atoms.py  generate_all_subsections.py  generate_comprehensive_atoms.py  generate_llm_atoms.py  generate_massive_matching.py  generate_massive_parsons.py  (+41 more)
(+5192 files in other folders)
