[project]
name = "notion-learning-sync"
version = "2.0.0"
description = "Neuro-Adaptive Learning Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top (intentional for CLI)
    "B904",  # raise exceptions with from err (noisy for CLI)
    "B007",  # Loop variable not used (intentional unpacking)
    "B008",  # Function call in defaults (FastAPI/Typer Depends pattern)
    "SIM105",  # contextlib.suppress (try/except/pass is clearer)
    "SIM108",  # Ternary operator (if/else often more readable)
    "SIM102",  # Nested if (sometimes clearer separate)
    "B905",  # zip strict param (Python 3.10+ only)
    "SIM118",  # dict.keys() iteration (explicit is fine)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
# Gradual strictness - start with basic checks, tighten over time
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
    "e2e: End-to-end tests"
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__"]
fail_under = 50  # Enforce minimum 50% coverage, increase to 70% over time
show_missing = true
