[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccna_cli_app"
version = "0.0.1"
dependencies = [
    "pytest",
    "pytest-bdd",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "*_steps.py",
]
